Opera update support.
Alpha.
